{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 41,
  "lineage": "b96eb400-8224-8934-1c50-5800224e0f96",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06e84edd6fad79265",
            "arn": "arn:aws:ec2:us-east-1:008165007532:elastic-ip/eipalloc-06e84edd6fad79265",
            "association_id": "eipassoc-002fb9f5540c1334d",
            "domain": "vpc",
            "id": "eipalloc-06e84edd6fad79265",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0668f45e8e45b741e",
            "private_dns": "ip-10-0-1-228.ec2.internal",
            "private_ip": "10.0.1.228",
            "public_dns": "ec2-34-233-72-126.compute-1.amazonaws.com",
            "public_ip": "34.233.72.126",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "laravel-notes-nat-eip"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "laravel-notes-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008165007532:internet-gateway/igw-02e3a873f8dd0a0ec",
            "id": "igw-02e3a873f8dd0a0ec",
            "owner_id": "008165007532",
            "tags": {
              "Environment": "production",
              "Name": "laravel-notes-igw"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "laravel-notes-igw"
            },
            "vpc_id": "vpc-0f9942682842ff5d0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:008165007532:loadbalancer/app/laravel-notes-alb/ae5287f880bd96ab",
            "arn_suffix": "app/laravel-notes-alb/ae5287f880bd96ab",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "laravel-notes-alb-18803148.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:008165007532:loadbalancer/app/laravel-notes-alb/ae5287f880bd96ab",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "laravel-notes-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07936c5b993fd85e4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-024257cd917c98ebe"
              },
              {
                "subnet_id": "subnet-0b19f1e82315c6f46"
              }
            ],
            "subnets": [
              "subnet-024257cd917c98ebe",
              "subnet-0b19f1e82315c6f46"
            ],
            "tags": {
              "Environment": "production",
              "Name": "laravel-notes-alb"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "laravel-notes-alb"
            },
            "vpc_id": "vpc-0f9942682842ff5d0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:008165007532:listener/app/laravel-notes-alb/ae5287f880bd96ab/7aa908a5bd022759",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:008165007532:targetgroup/laravel-notes-tg/938dc7d80c4d3047",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:008165007532:listener/app/laravel-notes-alb/ae5287f880bd96ab/7aa908a5bd022759",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:008165007532:loadbalancer/app/laravel-notes-alb/ae5287f880bd96ab",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "production",
              "Name": "laravel-notes-listener"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "laravel-notes-listener"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.laravel",
            "aws_security_group.alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "laravel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:008165007532:targetgroup/laravel-notes-tg/938dc7d80c4d3047",
            "arn_suffix": "targetgroup/laravel-notes-tg/938dc7d80c4d3047",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:008165007532:targetgroup/laravel-notes-tg/938dc7d80c4d3047",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:008165007532:loadbalancer/app/laravel-notes-alb/ae5287f880bd96ab"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "laravel-notes-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "laravel-notes-tg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "laravel-notes-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f9942682842ff5d0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06e84edd6fad79265",
            "association_id": "eipassoc-002fb9f5540c1334d",
            "connectivity_type": "public",
            "id": "nat-065c1b85362e44e6b",
            "network_interface_id": "eni-0668f45e8e45b741e",
            "private_ip": "10.0.1.228",
            "public_ip": "34.233.72.126",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b19f1e82315c6f46",
            "tags": {
              "Environment": "production",
              "Name": "laravel-notes-nat"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "laravel-notes-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008165007532:route-table/rtb-0d264a44283b27ccb",
            "id": "rtb-0d264a44283b27ccb",
            "owner_id": "008165007532",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-065c1b85362e44e6b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "laravel-notes-private-rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "laravel-notes-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9942682842ff5d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008165007532:route-table/rtb-09b4f3f530406faa3",
            "id": "rtb-09b4f3f530406faa3",
            "owner_id": "008165007532",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02e3a873f8dd0a0ec",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "laravel-notes-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "laravel-notes-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9942682842ff5d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fa40379e1461235",
            "route_table_id": "rtb-0d264a44283b27ccb",
            "subnet_id": "subnet-02297d25b5d1df848"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f748da6777e11e6a",
            "route_table_id": "rtb-0d264a44283b27ccb",
            "subnet_id": "subnet-088a89dadb09e8070"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03516332af9397eac",
            "route_table_id": "rtb-09b4f3f530406faa3",
            "subnet_id": "subnet-0b19f1e82315c6f46"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093fab96f221c7716",
            "route_table_id": "rtb-09b4f3f530406faa3",
            "subnet_id": "subnet-024257cd917c98ebe"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008165007532:security-group/sg-07936c5b993fd85e4",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07936c5b993fd85e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "laravel-notes-alb-sg",
            "name_prefix": "",
            "owner_id": "008165007532",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "laravel-notes-alb-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "laravel-notes-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9942682842ff5d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008165007532:security-group/sg-0afc91465ec299a8d",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afc91465ec299a8d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07936c5b993fd85e4"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "laravel-notes-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "008165007532",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "laravel-notes-ecs-tasks-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "laravel-notes-ecs-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9942682842ff5d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008165007532:security-group/sg-0126068dceca6e66b",
            "description": "Security group for RDS MySQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0126068dceca6e66b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from ECS tasks",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0afc91465ec299a8d"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "laravel-notes-rds-sg",
            "name_prefix": "",
            "owner_id": "008165007532",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "laravel-notes-rds-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "laravel-notes-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9942682842ff5d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008165007532:security-group/sg-054a3bdb56b865fa3",
            "description": "Security group for ElastiCache Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054a3bdb56b865fa3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from ECS tasks",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0afc91465ec299a8d"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "laravel-notes-redis-sg",
            "name_prefix": "",
            "owner_id": "008165007532",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "laravel-notes-redis-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "laravel-notes-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9942682842ff5d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008165007532:subnet/subnet-02297d25b5d1df848",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02297d25b5d1df848",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "008165007532",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "laravel-notes-private-subnet-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "laravel-notes-private-subnet-1"
            },
            "vpc_id": "vpc-0f9942682842ff5d0"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008165007532:subnet/subnet-088a89dadb09e8070",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088a89dadb09e8070",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "008165007532",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "laravel-notes-private-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "laravel-notes-private-subnet-2"
            },
            "vpc_id": "vpc-0f9942682842ff5d0"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008165007532:subnet/subnet-0b19f1e82315c6f46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b19f1e82315c6f46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "008165007532",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "laravel-notes-public-subnet-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "laravel-notes-public-subnet-1"
            },
            "vpc_id": "vpc-0f9942682842ff5d0"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008165007532:subnet/subnet-024257cd917c98ebe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024257cd917c98ebe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "008165007532",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "laravel-notes-public-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "laravel-notes-public-subnet-2"
            },
            "vpc_id": "vpc-0f9942682842ff5d0"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008165007532:vpc/vpc-0f9942682842ff5d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0661bafb7b7abc389",
            "default_route_table_id": "rtb-01c813189c919579e",
            "default_security_group_id": "sg-0bf4b4796c6590e27",
            "dhcp_options_id": "dopt-0864deb39db2e9007",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f9942682842ff5d0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01c813189c919579e",
            "owner_id": "008165007532",
            "tags": {
              "Environment": "production",
              "Name": "laravel-notes-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "laravel-notes-vpc"
            }
          }
        }
      ]
    }
  ]
}